Update to newest versions (except scala stays 2) Some General improvements