@@ -1,4 +1,4 @@
 #! /bin/sh
 
 my_dir=`dirname $0`
-java --enable-preview --add-modules jdk.incubator.concurrent -jar $my_dir/build/libs/Samaya-1.0-SNAPSHOT-all.jar $@
+java -jar $my_dir/build/libs/Samaya-1.0-SNAPSHOT-all.jar $@
